<resources>
    <string name="app_name">Assignment 1</string>
    <string name="title_expense">Expense</string>
    <string name="title_income">Income</string>
    <string name="title_summary">Summary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">Name</string>
    <string name="enter_app">Enter App</string>
    <string name="hint_category">Category</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_title">Title</string>
    <string name="balance">Balance</string>
    <string name="income">Total Income</string>
    <string name="expense">Total Expense</string>
    <string name="nothing_added">0</string>
    <string name="currency">Currency</string>
    <string name="add_to_database">Add to database</string>
    <string name="filter">Filter</string>
    <string name="greeting">Welcome to your summary</string>
    <string name="remove_filter">Remove filter</string>
    <string name="hint_date">Date</string>
    <string name="expenditure_date">Expenditure date</string>

</resources>