<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_summary">

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.example.assignment1.ui.summary.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/navigation_expense"
        android:name="com.example.assignment1.ui.expense.ExpenseFragment"
        android:label="@string/title_expense"
        tools:layout="@layout/fragment_expense" />

    <fragment
        android:id="@+id/navigation_income"
        android:name="com.example.assignment1.ui.income.IncomeFragment"
        android:label="@string/title_income"
        tools:layout="@layout/fragment_income" />
</navigation>